<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171414"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/image_homescreen"
            android:layout_marginStart="115dp"
            android:layout_marginTop="70dp"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_baseline_library_music_24"
            android:layout_marginTop="25dp"
            android:layout_marginStart="45dp"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupHere"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    android:orientation="horizontal"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ambient"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nature"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/farm"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waves"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summer"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lo_fi"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coding"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asmr"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rain"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tranquility"/>
                    <com.google.android.material.chip.Chip
                        style="@style/CustomChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meditation"/>
                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etvTimerInit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:inputType="time"
            android:background="#252525"
            android:hint="@string/set_timer"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat"
            android:layout_width="185dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="115dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLetsGo"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="25dp"
            android:text="@string/let_s_go"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            app:cornerRadius="25dp"/>

    </LinearLayout>

</ScrollView>